fix: sponsorsContainer overflow

--- a/src/app/sponsors/sponsors.module.css
+++ b/src/app/sponsors/sponsors.module.css
@@ -190,6 +190,8 @@
   @media screen and (max-width:560px) {
     gap: 5px;
   }
+
+
 }
 
 .astro {
@@ -217,6 +219,10 @@
   @media screen and (min-width:656px) and (max-width:656px) {
     transform: translateY(30px);
   }
+
+  @media screen and (max-height:656px) {
+    transform: translateY(80px);
+  }
 }
 
 .parentList::-webkit-scrollbar,
@@ -224,7 +230,11 @@
 .sponsorList::-webkit-scrollbar {
   display: none;
 }
-
+.sponsorList,.parentList{
+  @media screen and (max-height:656px) {
+    margin-top: 100px;
+  }
+}
 .page {
   padding: 5px;
   min-height: 100vh;
